删除多余的文件

--- a/RxArchitecture/路由文档.md
+++ b/RxArchitecture/路由文档.md
@@ -25,6 +25,14 @@
 |girl list fragment|`/gank/girl/list`|
 |gank girl detail activity(ignore)|`/gank/girl/detail/ac`|
 
+##### Journalism模块页面
+|页面|router|
+|---|---|
+|journalism tab fragment|`/journalism/tab`|
+|journalism list fragment|`/journalism/journalism/list`|
+|journalism joke fragment|`/journalism/joke/list`|
+
+
 
 
 
