--- a/RxArchitecture/路由文档.md
+++ b/RxArchitecture/路由文档.md
@@ -1,36 +1,36 @@
 ##### debug
-| 页面 | router |
-|--------|--------|
-| 知乎 debug 首页 | `/zhihu/home`  |
-| 知乎 debug fg | `/zhihu/main` |
+| **页面**        | **router**    |
+| --------------- | ------------- |
+| 知乎 debug 首页 | `/zhihu/home` |
+| 知乎 debug fg   | `/zhihu/main` |
 | Gank debug 首页 | `/gank/home`  |
-| Gank debug fg | `/gank/main` |
+| Gank debug fg   | `/gank/main`  |
  
 ##### 知乎模块页面
-|页面|router|
-|---|---|
-|知乎Tab fragment|`/zhihu/tab`|
-|知乎main fragment|`/zhihu/main`|
-|知乎detail fragment|`/zhihu/detail`|
-|知乎热门列表 fragment|`/zhihu/hot/list`|
-|知乎日报列表 fragment|`/zhihu/daily/list`|
+| **页面**              | **router**          |
+| --------------------- | ------------------- |
+| 知乎Tab fragment      | `/zhihu/tab`        |
+| 知乎main fragment     | `/zhihu/main`       |
+| 知乎detail fragment   | `/zhihu/detail`     |
+| 知乎热门列表 fragment | `/zhihu/hot/list`   |
+| 知乎日报列表 fragment | `/zhihu/daily/list` |
 
 ##### Gank模块页面
-|页面|router|
-|---|---|
-|gank tab fragment|`/gank/tab`|
-|gank girl detail fragment|`/gank/girl/detail`|
-|gank tech detail fragment|`/gank/tech/detail`|
-|tech list fragment|`/gank/tech/list`|
-|girl list fragment|`/gank/girl/list`|
-|gank girl detail activity(ignore)|`/gank/girl/detail/ac`|
+| **页面**                          | **router**             |
+| --------------------------------- | ---------------------- |
+| gank tab fragment                 | `/gank/tab`            |
+| gank girl detail fragment         | `/gank/girl/detail`    |
+| gank tech detail fragment         | `/gank/tech/detail`    |
+| tech list fragment                | `/gank/tech/list`      |
+| girl list fragment                | `/gank/girl/list`      |
+| gank girl detail activity(ignore) | `/gank/girl/detail/ac` |
 
 ##### Journalism模块页面
-|页面|router|
-|---|---|
-|journalism tab fragment|`/journalism/tab`|
-|journalism list fragment|`/journalism/journalism/list`|
-|journalism joke fragment|`/journalism/joke/list`|
+| **页面**                 | **router**                    |
+| ------------------------ | ----------------------------- |
+| journalism tab fragment  | `/journalism/tab`             |
+| journalism list fragment | `/journalism/journalism/list` |
+| journalism joke fragment | `/journalism/joke/list`       |
 
 
 
